objects/Inquiry_Comment__c.object
<CustomObject>
    <description>Comments made related to each individual Inquiry record on a Support Case.</description>
    <fields>
        <fullName>Auction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related auction to the inquiry.</description>
        <label>Auction</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Inquiry Comments</relationshipLabel>
        <relationshipName>Inquiry_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Inquiry_Type__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; + Customer_Inquiry__c, TEXT(Customer_Inquiry__r.Call_Type__c), &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Inquiry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Inquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the Customer Inquiry record.</description>
        <label>Customer Inquiry</label>
        <referenceTo>Customer_Inquiry__c</referenceTo>
        <relationshipLabel>Inquiry Comments</relationshipLabel>
        <relationshipName>Inquiry_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feed_Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feed Task Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiry_Call_Bucket__c</fullName>
        <formula>TEXT(Customer_Inquiry__r.Call_Bucket__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Notes__c</fullName>
        <description>Notes related to the Inquiry in the Customer Inquiry lookup field.</description>
        <label>Inquiry Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ops_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related ops case. ie: titles, arb, etc.</description>
        <label>Ops Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Inquiry Comments (Ops Case)</relationshipLabel>
        <relationshipName>Inquiry_Comments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the CI record.</description>
        <formula>TEXT(Customer_Inquiry__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Case_Created_Date__c</fullName>
        <formula>Support_Case__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Case Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Support_Case_Owner__c</fullName>
        <formula>Support_Case__r.Owner:User.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Case_Status__c</fullName>
        <formula>TEXT(Support_Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lookup to the related Support Case.</description>
        <label>Support Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Inquiry Comments</relationshipLabel>
        <relationshipName>Inquiry_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIN_Last_6__c</fullName>
        <description>Grabs last 6 of VIN from related Customer Inquiry</description>
        <formula>Customer_Inquiry__r.VIN_Last_6__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN Last 6</label>
        <type>Text</type>
    </fields>
    <label>Inquiry Comment</label>
    <nameField>
        <displayFormat>IC-{000000}</displayFormat>
        <label>Inquiry Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry Comments</pluralLabel>
    <recordTypes>
        <fullName>Inquiry_Comment</fullName>
        <active>true</active>
        <description>This record type is for the storing and displaying of Inquiry Comments.</description>
        <label>Inquiry Comment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inquiry_Junction_Object</fullName>
        <active>true</active>
        <description>This record type serves as a junction object between Cases and Customer Inquiries.</description>
        <label>Inquiry Junction Object</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>